garanti-labs/lab1-grpc/manifests/06-destinationrule-unlimited-conn.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: grpc-echo
  namespace: ossm-playground-apps
spec:
  host: grpc-echo.ossm-playground-apps.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
        maxRequestsPerConnection: 0
        idleTimeout: 3600s
